--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
             background-color: #FFFAF2;
             margin: 0;
             font-family: Aleo;
-          <img src="logo.png" alt="Flowers in Chania">
         }
 
         ul {
@@ -17,7 +16,7 @@
             padding: 0;
             background-color: #FFFAF2;
             display: flex;
-            justify-content: flex-end; /* Align items to the right */
+            justify-content: flex-end;
         }
 
         li {
@@ -35,11 +34,17 @@
         li a:hover {
             background-color: #D4B682;
         }
+      
+      .logo {
+            margin-right: auto;
+            padding: 5px;
+        }
     </style>
 </head>
 <body>
 
 <ul>
+    <img class="logo" src="logo.png" alt="logo" height="40">
     <li><a class="active" href="#home">Home</a></li>
     <li><a href="#about">About</a></li>
     <li><a href="#map">Map</a></li>
