--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         body {
             background-color: #FFFAF2;
             margin: 0;
-            font-family: Aleo;
+            font-family: Aleo, serif;
         }
 
         ul {
@@ -52,6 +52,8 @@
     <li><a href="#contactus">Contact Us</a></li>
     <li><a href="#search">Search</a></li>
 </ul>
+  
+  <img ="body-image" src="photo.jpg" alt="Stratford Art Museum">
 
 </body>
 </html>
