--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>The Stratford Art Museum</title>
     <style>
         body {
@@ -39,6 +40,20 @@
             margin-right: auto;
             padding: 5px;
         }
+      
+      .container {
+          position: relative;
+          text-align: center;
+          color: white;
+        }
+
+
+      .title {
+        position: absolute;
+        top: 8px;
+        left: 16px;
+        }
+      
     </style>
 </head>
 <body>
@@ -53,7 +68,12 @@
     <li><a href="#search">Search</a></li>
 </ul>
   
-  <img ="body-image" src="photo.jpg" alt="Stratford Art Museum">
+  <img src="AdobeStock_618178757.jpeg" alt="Man in museum" width="1280" height="573">
+  
+  <div class="container">
+  <div class="top-left">Top Left</div>
+
+</div>
 
 </body>
 </html>
