--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             font-size: 20px;
             font-weight: bold;
             color: black;
-            margin-top: 235px;
+            margin-top: 110;
 }
       
       .painting1, .painting2, .painting4, .painting5, .painting6 {
@@ -220,11 +220,11 @@
       table {
           font-family: Aleo, serif;
           position: relative;
-          left: 61px; /* Keep this for positioning */
-          margin-left: 31px; /* Ensure space to the left */
-          top: 1430px;
+          left: 61px;
+          margin-left: 31px;
+          top: 1420px;
           border-collapse: collapse;
-          width: 100%; /* Adjust as needed */
+          width: 50%;
 }
       
         table, th, td {
@@ -243,7 +243,7 @@
           border: none;
           color: #D4B682;
           left: 250;
-          top: 1430px;
+          top: 1420px;
           margin-right: 35px;
           padding: 16px 32px;
           text-align: center;
