--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 }
       
         table, th, td {
-            border: 2px solid black;
+            border: 3px solid #D4B682;
         }
       
         th, td {
