--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Aleo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   
   
-    <title>The Stratford Art Museum</title>
+    <title>Home</title>
     <style>
         body {
             background-color: #FFFAF2;
@@ -140,6 +140,12 @@
             width: 292px;
             height: 396px;
       }
+      
+/*Code copied from: [https://www.w3schools.com/howto/howto_css_image_overlay.asp]
+Author: [w3Schools]
+Name: [How TO - Image Hover Overlay]
+Description: [Used to make hover effect when mouse is ontop of images]
+Date retrieved: [November 30, 2024] */
       
     .painting-container {
         position: absolute;
