--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ Date retrieved: [November 30, 2024] */
       
       footer {
         background-color: #ECDEC5;
-        padding: 5px;
+        padding: 20px 5px;
         top: 1750px;
         width: 100%;
         position: relative;
