--- a/index.html
+++ b/index.html
@@ -341,12 +341,12 @@ Date retrieved: [November 30, 2024] */
 
 <ul>
     <img class="logo" src="logo.png" alt="logo" height="40">
-    <li><a class="active" href="#home">Home</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#map">Map</a></li>
-    <li><a href="#gallery">Gallery</a></li>
-    <li><a href="#contactus">Contact Us</a></li>
-    <li><a href="#search">Search</a></li>
+    <li><a class="active" href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="map.html">Map</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="contactus.html">Contact Us</a></li>
+    <li><a href="search.html">Search</a></li>
 </ul>
   
 <div class="container">
