--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ Date retrieved: [November 30, 2024] */
 <ul>
     <img class="logo" src="logo.png" alt="logo" height="40">
     <li><a class="active" href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
+    <li><a href="https://j47patel.github.io/Our-History/">About</a></li>
     <li><a href="map.html">Map</a></li>
     <li><a href="gallery.html">Gallery</a></li>
     <li><a href="contactus.html">Contact Us</a></li>
