--- a/index.html
+++ b/index.html
@@ -341,11 +341,11 @@ Date retrieved: [November 30, 2024] */
 
 <ul>
     <img class="logo" src="logo.png" alt="logo" height="40">
-    <li><a class="active" href="index.html">Home</a></li>
+    <li><a class="active" href="https://j47patel.github.io/final-project-pt-2/">Home</a></li>
     <li><a href="https://j47patel.github.io/Our-History/">About</a></li>
     <li><a href="map.html">Map</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="contactus.html">Contact Us</a></li>
+    <li><a href="https://j47patel.github.io/Galleries/">Gallery</a></li>
+    <li><a href="https://j47patel.github.io/Contact-Us/">Contact Us</a></li>
     <li><a href="search.html">Search</a></li>
 </ul>
   
