--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ Date retrieved: [November 30, 2024] */
     <img class="logo" src="logo.png" alt="logo" height="40">
     <li><a class="active" href="https://j47patel.github.io/final-project-pt-2/">Home</a></li>
     <li><a href="https://j47patel.github.io/Our-History/">About</a></li>
-    <li><a href="map.html">Map</a></li>
+    <li><a href="https://maps.metmuseum.org/?floor=1&lang=en-GB#16.89/40.779506/-73.963468/-61">Map</a></li>
     <li><a href="https://j47patel.github.io/Galleries/">Gallery</a></li>
     <li><a href="https://j47patel.github.io/Contact-Us/">Contact Us</a></li>
     <li><a href="search.html">Search</a></li>
