--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ Date retrieved: [November 30, 2024] */
     <li><a href="https://maps.metmuseum.org/?floor=1&lang=en-GB#16.89/40.779506/-73.963468/-61">Map</a></li>
     <li><a href="https://j47patel.github.io/Galleries/">Gallery</a></li>
     <li><a href="https://j47patel.github.io/Contact-Us/">Contact Us</a></li>
-    <li><a href="search.html">Search</a></li>
+    <li><a>Search</a></li>
 </ul>
   
 <div class="container">
